[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Weapon/Weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://HealthBar/ProgressBar.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 100, 91.5 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0, 1, 0.156863, 1 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Weapon_Rotation" type="Position2D" parent="."]

[node name="Weapon" parent="Weapon_Rotation" instance=ExtResource( 3 )]
position = Vector2( 73, 0 )
shoot_speed = 2.0
user = 1

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -58.0
margin_top = -51.0
margin_right = 59.0
margin_bottom = -37.0
value = 100.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sensor" type="Area2D" parent="."]

[node name="SenseHere" type="CollisionShape2D" parent="Sensor"]
shape = SubResource( 2 )

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="TargetThing" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Coward" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Sensor" to="." method="_on_Sensor_body_entered"]
[connection signal="body_exited" from="Sensor" to="." method="_on_Sensor_body_exited"]
[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="timeout" from="TargetThing" to="." method="_on_TargetThing_timeout"]
[connection signal="timeout" from="Coward" to="." method="_on_Coward_timeout"]
